# KnotTools

./: .gitignore  README.md  pyproject.toml
knots/: braid.py  knots.py
src/knots/: braid.py  knot_atlas.py  knots.py  polynomials.py
tests/: test_known_knot_properties.py  test_polynomials.py
