[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knottools"
dynamic = ["version"]
description = 'A python library to help you study knots and calculate their invariants.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Isaac Beh", email = "isaacwbeh@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Isaac Beh/knottools#readme"
Issues = "https://github.com/Isaac Beh/knottools/issues"
Source = "https://github.com/Isaac Beh/knottools"

[tool.hatch.version]
path = "src/knottools/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/knottools tests}"

[tool.coverage.run]
source_pkgs = ["knottools", "tests"]
branch = true
parallel = true
omit = [
  "src/knottools/__about__.py",
]

[tool.coverage.paths]
knottools = ["src/knottools", "*/knottools/src/knottools"]
tests = ["tests", "*/knottools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
